--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
     "archiver": "^5.3.0",
     "extract-zip": "^2.0.1",
@@ -20,6 +21,7 @@
     "fs-extra": "^9.1.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-static": "^5.0.0",
     "moment": "^2.29.1"
   }
 }
